# MoBERT

./: .gitignore  MANIFEST.in  Pipfile  pyproject.toml
src/: Pipfile  __init__.py
src/dataset/: primary_evaluator_dataset.py
src/mobert/: __version__.py  get_opt.py  optimize_evaluator.py  train_primary_evaluator.py
src/mobert/common/: skeleton.py
src/mobert/configs/: __init__.py
src/mobert/dataset/: primary_evaluator_dataset.py
src/mobert/models/: motion_text_eval_bert.py
src/mobert/primary_evaluator/: __init__.py
src/primary_evaluator/: __init__.py
src/primary_evaluator/std_bpe2000/: __init__.py
src/sample_data/: __init__.py
